WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170173
[OWR] Fix class structure for the OWR mock classes after last modifications
https://bugs.webkit.org/show_bug.cgi?id=170173
Summary
[OWR] Fix class structure for the OWR mock classes after last modifications
Alejandro G. Castro
Reported
2017-03-28 03:07:45 PDT
In case of OWR MockRealtimeMediaSource.h inherits from RealtimeMediaSourceOwr, so we have to change some of the definitions.
Attachments
Patch
(1.84 KB, patch)
2017-03-28 03:12 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2017-03-28 03:12:06 PDT
Created
attachment 305581
[details]
Patch
youenn fablet
Comment 2
2017-03-28 07:56:47 PDT
Comment on
attachment 305581
[details]
Patch To make things cleaner, the mock owr source could just implement RealtimeMediaSource and forwards calls to a member field inheriting from RealtimeMediaSourceOwr. Future refactoring? View in context:
https://bugs.webkit.org/attachment.cgi?id=305581&action=review
> Source/WebCore/platform/mock/MockRealtimeMediaSource.h:64 > +#if !USE(OPENWEBRTC)
Or you could add a noop implementation here or in mock owr subclasses
Alejandro G. Castro
Comment 3
2017-03-30 05:06:22 PDT
Thanks for the review! (In reply to youenn fablet from
comment #2
)
> Comment on
attachment 305581
[details]
> Patch > > To make things cleaner, the mock owr source could just implement > RealtimeMediaSource and forwards calls to a member field inheriting from > RealtimeMediaSourceOwr. Future refactoring? >
Yeah, we want to review the whole mock class for webrtc at some point.
> View in context: >
https://bugs.webkit.org/attachment.cgi?id=305581&action=review
> > > Source/WebCore/platform/mock/MockRealtimeMediaSource.h:64 > > +#if !USE(OPENWEBRTC) > > Or you could add a noop implementation here or in mock owr subclasses
Actually the OWR is a super class of Mock, it is a noop already there, I would need to override in that case and don't do it for other platforms.
WebKit Commit Bot
Comment 4
2017-04-03 05:24:26 PDT
Comment on
attachment 305581
[details]
Patch Clearing flags on attachment: 305581 Committed
r214772
: <
http://trac.webkit.org/changeset/214772
>
WebKit Commit Bot
Comment 5
2017-04-03 05:24:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug