[OWR] Fix class structure for the OWR mock classes after last modifications https://bugs.webkit.org/show_bug.cgi?id=170173

Patch by Alejandro G. Castro <alex@igalia.com> on 2017-04-03
Reviewed by Youenn Fablet.

In case of OWR MockRealtimeMediaSource inherits from
RealtimeMediaSourceOwr, so we have to change some of the function
interfaces.

* platform/mock/MockRealtimeMediaSource.h:

Canonical link: https://commits.webkit.org/187315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214772 268f45cc-cd09-0410-ab3c-d52691b4dbfc